# lab3

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  reset_db.ps1  reset_db.py  run_developer.ps1  run_player.ps1  run_server.ps1  start_developer.bat  start_player.bat  start_server.bat
developer_client/: auth.py  client.py  create_game_template.py  game_manage.py  game_upload.py  menu.py  utils.py
developer_client/games/gomoku/: gomoku_client_gui.py  gomoku_server.py
developer_client/games/swing/: swing_client_gui.py  swing_server.py
developer_client/games/tetris/: tetris_client_gui.py
developer_client/template/: game_client_template.py  game_server_template.py
player_client/: auth.py  client.py  library.py  lobby.py  menu.py  review.py  store.py  utils.py
player_client/games/1/go/: game_info.json  gomoku_server.py
player_client/games/1/gomo/: game_info.json  gomoku_server.py
player_client/games/1/sssss/: game_info.json  swing_server.py
player_client/games/1/tet/: game_info.json  tetris_server.py
player_client/games/1/tttttt/: tetris_server.py
player_client/games/2/go/: game_info.json
player_client/games/2/gomo/: game_info.json  gomoku_server.py
player_client/games/5a47ae4dae164642b8a95797696b0ac9_gomoku/: game_info.json
player_client/games/d333dc4771064bb99d60e8379ad03904_g/: game_info.json
server/: auth.py  data.py  game_manager.py  game_runtime.py  handlers.py  lobby_manager.py  room_subscriptions.py  server.py  utils.py
server/db/: games.json  rooms.json  users.json
utils/: file_transfer.py  protocol.py
(+16 files in other folders)
