[project]
name = "lab3"
version = "0.1.0"
description = "Network Programming Lab3 - Game Lobby & Store Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
server = "server.server:main"
player = "player_client.client:main"
developer = "developer_client.client:main"
